Fix hr box-sizing that was causing issues on mobile view

--- a/css/bl.css
+++ b/css/bl.css
@@ -9,7 +9,8 @@ body {
 hr {
   border-width: 1px;
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 0.5rem;
+  box-sizing: inherit; }
 
 hr.light {
   border-color: #fff; }
