--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -13,6 +13,7 @@ hr {
   border-width: 1px;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+  box-sizing: inherit;
 }
 
 hr.light {
